--- a/client/src/app/pages/positions/create-position/create-position.component.scss
+++ b/client/src/app/pages/positions/create-position/create-position.component.scss
@@ -125,23 +125,6 @@ p {
           text-transform: uppercase;
           text-align: center;
         }
-        &__image {
-          position: relative;
-          width: 125px;
-          height: 125px;
-          @include disable-select();
-          img {
-            cursor: pointer;
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            &.image-upload {
-              position: absolute;
-              top: 0;
-              left: 0;
-            }
-          }
-        }
         &__field {
           margin-top: $profile-form-field-mt;
           box-sizing: border-box;
@@ -192,14 +175,6 @@ p {
                 color: map-get($md-cfaccent, 100);
               }
             }
-            .users {
-              margin-top: 10px;
-              @include flex(column, center, center);
-              & > *  {
-                margin-top: 20px;
-                margin-right: 15px;
-              }
-            }
           }
           mat-form-field {
             width: 100%;
@@ -226,12 +201,11 @@ p {
       }
     }
   }
-  &.company-preview {
+  &.position-preview {
     padding: 0;
     width: 100%;
     display: grid;
     grid-template:
-    " hero hero " auto 
     " lege lege " 0
     " left main-nav " 0
     " left main " auto
@@ -280,128 +254,6 @@ p {
     .header-section {
       grid-area: hero;
       background-color: $white;
-
-      .tabs-row {
-        height: 60px;
-        width: fit-content;
-        margin: auto;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        h3 {
-          cursor: pointer;
-          font-family: 'Poppins-Semibold', sans-serif;
-          font-size: 20px;
-          text-transform: uppercase;
-          color: rgba(map-get($md-cfaccent, 500), .34);
-          margin: 0 20px;
-          &:hover {
-            color: map-get($md-cfprimary, 500);
-          }
-          &.active {
-            color: map-get($md-cfprimary, 500);
-          }
-        }
-      }
-
-      .icon-title {
-        display: inline-grid;
-        grid-template: "image title" 28px "image info" 28px
-        / 56px auto;
-        grid-gap: 0 10px;
-        width: 240px;
-        margin: 5px 10px 5px 0;
-        img {
-          grid-area: image;
-          width: 56px;
-        }
-        label {
-          grid-area: title;
-          font-family: 'Poppins-Regular', sans-serif;
-          font-size: 14px;
-          line-height: 28px;
-          font-style: normal;
-          font-weight: 400;
-          color: rgba(map-get($md-cfaccent, 500), .44);
-        }
-        p {
-          grid-area: info;
-          margin: 0;
-          font-family: 'Roboto', sans-serif;
-          font-size: 16px;
-          line-height: 28px;
-          font-style: normal;
-          font-weight: 500;
-        }
-        a {
-          grid-area: info;
-          text-decoration: none;
-          color: #263f5d;
-        }
-      }
-      
-      small {
-        display: flex;
-        align-items: center;
-        margin: 10px 20px 10px 0; 
-        font-family: 'Poppins', sans-serif;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 16px;
-        color: rgba(map-get($md-cfaccent, 500), .84);
-        label {
-          color: rgba(map-get($md-cfaccent, 500), .34);
-          margin-right: 5px;
-        }
-        img {
-          width: 10px;
-          margin-right: 5px;
-          &.valid {
-            width: 15px;
-            margin: 0;
-          }
-        }
-      }
-      
-      .company-row {
-        width: 100%;
-        box-sizing: border-box;
-        display: inline-flex;
-        flex-wrap: wrap;
-        padding: 40px;
-        border-bottom: 1px solid map-get($md-cfaccent, 50);
-        .company-logo {
-          width: 125px;
-          height: 125px;
-          border-radius: 50%;
-          object-fit: cover;
-        }
-        .company-detail {
-          display: inline-flex;
-          flex-direction: column;
-          flex: 1;
-          margin-left: 30px;
-          h1 {
-            font-family: 'Poppins', sans-serif;
-            font-size: 30px;
-            line-height: 34px;
-            font-weight: 600;
-            margin: 0;
-            margin-bottom: 5px;
-          }
-          .company-info {
-            display: inline-flex;
-            flex-wrap: wrap;
-          }
-        }
-        .company-status {
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-          align-items: flex-end;
-          margin-left: 20px;
-        }
-      }
     }
     
     .nav-section {
@@ -521,6 +373,29 @@ p {
         }
       }
       
+      small {
+        display: flex;
+        align-items: center;
+        margin: 10px 20px 10px 0; 
+        font-family: 'Poppins', sans-serif;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
+        color: rgba(map-get($md-cfaccent, 500), .84);
+        label {
+          color: rgba(map-get($md-cfaccent, 500), .34);
+          margin-right: 5px;
+        }
+        img {
+          width: 10px;
+          margin-right: 5px;
+          &.valid {
+            width: 15px;
+            margin: 0;
+          }
+        }
+      }
+      
       .row {
         background: white;
         padding: 25px 20px;
@@ -555,6 +430,84 @@ p {
             color: rgba(map-get($md-cfaccent, 500), .74);
           }
         }
+        .position-row {
+          width: 100%;
+          box-sizing: border-box;
+          display: inline-flex;
+          flex-wrap: wrap;
+          .position-detail {
+            display: inline-flex;
+            flex-direction: column;
+            flex: 1;
+            h1 {
+              font-family: 'Poppins', sans-serif;
+              font-size: 30px;
+              line-height: 34px;
+              font-weight: 600;
+              margin: 0;
+              margin-bottom: 5px;
+            }
+            .position-info {
+              display: inline-flex;
+              flex-wrap: wrap;
+            }
+          }
+          .position-status {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: flex-end;
+            margin-left: 20px;
+          }
+        }
+        .position-row__details {
+          width: 100%;
+          box-sizing: border-box;
+          display: inline-flex;
+          flex-wrap: wrap;
+          border: solid 1px #F0F0F0;
+          border-radius: 5px;
+          max-width: 1100px;
+          margin-top: 30px;
+          .position-info {
+            width: 25%;
+            border: solid 1px #F0F0F0;
+            padding: 15px;
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+            label {
+              font-family: 'Poppins-Regular', sans-serif;
+              font-size: 14px;
+              line-height: 21px;
+              font-style: normal;
+              font-weight: 400;
+              color: rgba(map-get($md-cfaccent, 500), .44);
+            }
+            p {
+              margin: 0;
+              font-family: 'Roboto', sans-serif;
+              font-size: 16px;
+              line-height: 22px;
+              font-style: normal;
+              font-weight: 500;
+            }
+          }
+          & > :first-child {
+            border-top-left-radius: 5px;
+          }
+          & > :last-child {
+            border-bottom-right-radius: 5px;
+          }
+          & > :nth-child(4) {
+            border-top-right-radius: 5px;
+          }
+          & > :nth-child(5) {
+            border-bottom-left-radius: 5px;
+          }
+        }
       }
       simple-tag {
         display: inline-flex;
@@ -585,56 +538,6 @@ p {
           cursor: pointer;
         }
       }
-    }
-  }
-}
-
-.img-tag {
-  background-color: $secondary-bg-color;
-  border: solid 3px $secondary-bg-color;
-  border-radius: 38px;
-  display: inline-grid;
-  grid-template: 
-    "image title" 35px
-    "image info" 35px
-    / 70px auto;
-  grid-gap: 0 10px;
-  width: 350px;
-  margin: 10px 20px 5px 0;
-  position: relative;
-  img {
-    grid-area: image;
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-  }
-  label {
-    grid-area: title;
-    font-size: 16px;
-    display: flex;
-    align-items: flex-end;
-  }
-  a {
-    grid-area: info;
-    text-decoration: none;
-    cursor: pointer;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    padding-right: 20px;
-  }
-  .remove {
-    position: absolute;
-    font-size: 30px;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    color: rgba(map-get($md-cfaccent, 500), .1) !important;
-    top: 5px;
-    right: 15px;
-    cursor: pointer;
-    &:hover {
-      color: map-get($md-cfred, 500) !important;
     }
   }
 }
@@ -709,10 +612,6 @@ p {
           max-width: $profile-form-max-width-tablet;
           padding: $profile-form-padding-tablet;
           margin-bottom: 0;
-          &__image {
-            width: 110px;
-            height: 110px;
-          }
           &__field {
             width: 90%;
             &.border {
@@ -734,22 +633,33 @@ p {
         }
       }
     }
-    &.company-preview {
-      .header-section {
-        .company-row {
-          padding: 25px;
-        }
-      }
+    &.position-preview {
       .nav-section {
         padding: 0 0 50px 25px;
       }
       .main-section {
         margin: 0 25px 0 0;
+        .row {
+          .position-row__details {
+            .position-info {
+              width: 50%;
+            }
+            & > :nth-child(2) {
+              border-top-right-radius: 5px;
+            }
+            & > :nth-child(4) {
+              border-top-right-radius: 0;
+            }
+            & > :nth-child(5) {
+              border-bottom-left-radius: 0;
+            }
+            & > :nth-child(7) {
+              border-bottom-left-radius: 5px;
+            }
+          }
+        }
       }
     }
-  }
-  .img-tag {
-    width: 320px;
   }
 }
 
@@ -775,10 +685,6 @@ p {
           max-width: $profile-form-max-width-mobile;
           padding: $profile-form-padding-mobile;
           margin-bottom: 25px;
-          &__image {
-            width: 95px;
-            height: 95px;
-          }
           &__field {
             width: 95%;
             &.border {
@@ -800,7 +706,7 @@ p {
         }
       }
     }
-    &.company-preview {
+    &.position-preview {
       grid-template:
       " hero hero " auto 
       " lege lege " 0
@@ -835,52 +741,6 @@ p {
         }
       }
 
-      .header-section {
-        .tabs-row {
-          h3 {
-            font-size: 15px;
-            margin: 0 10px;
-          }
-        }
-        .company-row {
-          padding: 20px 20px;
-          flex-direction: column;
-          align-items: center;
-          .company-logo {
-            width: 110px;
-            height: 110px;
-            margin-right: 0;
-            border-radius: 50%;
-            object-fit: cover;
-          }
-          .company-detail {
-            margin: 20px 0;
-            h1, h4 {
-              text-align: center;
-            }
-            .company-info {
-              flex-direction: column;
-              display: flex;
-              align-items: center;
-            }
-          }
-          .company-status {
-            flex-direction: column;
-            align-items: center;
-            margin-left: 0;
-            & > * {
-              margin: 5px;
-            }
-            img {
-              margin-top: 15px;
-            }
-          }
-        }
-        small {
-          padding-right: 0;
-        }
-      }
-
       .nav-section {
         position: fixed;
         padding: 10px 20px 30px 20px;
@@ -904,11 +764,40 @@ p {
         .edit-title {
           display: none;
         }
+        small {
+          padding-right: 0;
+        }
+        .row {
+          .position-row {
+            padding: 20px 20px;
+            flex-direction: column;
+            align-items: center;
+            .position-detail {
+              margin: 20px 0;
+              h1, h4 {
+                text-align: center;
+              }
+              .position-info {
+                flex-direction: column;
+                display: flex;
+                align-items: center;
+              }
+            }
+            .position-status {
+              flex-direction: column;
+              align-items: center;
+              margin-left: 0;
+              & > * {
+                margin: 5px;
+              }
+              img {
+                margin-top: 15px;
+              }
+            }
+          }
+        }
       }
     }
-  }
-  .img-tag {
-    width: 290px;
   }
 }
 
@@ -928,9 +817,28 @@ p {
         }
       }
     }
-  }
-  .img-tag {
-    width: 100%;
-    margin-right: 0;
+    &.position-preview {
+      .main-section {
+        .row {
+          .position-row__details {
+            .position-info {
+              width: 100%;
+            }
+            & > :first-child {
+              border-top-right-radius: 5px;
+            }
+            & > :nth-child(2) {
+              border-top-right-radius: 0;
+            }
+            & > :nth-child(7) {
+              border-bottom-left-radius: 0;
+            }
+            & > :last-child {
+              border-bottom-left-radius: 5px;
+            }
+          }
+        }
+      }
+    }
   }
 }
