--- a/client/src/app/pages/positions/positions-details/positions-details.component.html
+++ b/client/src/app/pages/positions/positions-details/positions-details.component.html
@@ -5,7 +5,7 @@
   </div>
 </ng-container>
 <!-- Search Bar -->
-<div class="career-main" id="information">
+<div class="career-main">
   <div class="comman_search_filter">
     <div class="postion-search-detail">
       <div class="filter-data">
@@ -23,7 +23,8 @@
 
           <mat-card>
             <div class="company-border">
-              <img class="userimg" src="{{info?.company_logo ? info.company_logo : 'assets/icons/no_photo.png'}}">
+              <img alt="Company Logo" class="userimg" src="{{info?.company_logo ? info?.company_logo : 'assets/icons/ic_default_company_logo.svg'}}">
+              <img class="image-upload" alt="Upload Image" src="{{info?.company_logo ? info?.company_logo : 'assets/icons/ic_image_upload.svg'}}">
             </div>
             <h5>{{info.company_name}}</h5>
             <img src="assets/icons/ic_location.svg">
@@ -49,8 +50,11 @@
                 </li>
                 <li>
                   <span>Company Industries</span>
-                  <small>
+                  <small *ngIf="info.company_industries?.length > 0 ; else noIndustry">
                 <li *ngFor="let industry of info.company_industries">{{industry}} </li></small>
+                <ng-template #noIndustry>
+                  <li class="company-address">N/A</li>
+                </ng-template>
                 </li>
                 <li>
                   <span>Positions Available</span>
@@ -78,19 +82,15 @@
               <h4>Contents</h4>
               <ol *ngFor="let jobData of positionName">
                 <li (click)="scrollSmoothTo('information')"> Position Information</li>
-                <li (click)="scrollSmoothTo('skills')" *ngIf="matchedSkills?.length > 0 && missingSkills?.length > 0">
-                  Missing/Matching Skills</li>
-                <li (click)="scrollSmoothTo('description')" *ngIf="jobData.position_desc">Job Description</li>
-                <li (click)="scrollSmoothTo('qualification')"
-                  *ngIf="jobData.preferred_education_levels?.length > 0 && jobData.preferred_majors?.length > 0 && jobData.preferred_major_categories?.length > 0">
-                  Qualification Level</li>
-                <li (click)="scrollSmoothTo('experience')" *ngIf="jobData.preferred_experience?.length > 0">Preferred
-                  Experience</li>
-                <li (click)="scrollSmoothTo('preferred_skills')"
-                  *ngIf="jobData.preferred_skills?.length > 0 && jobData.minimum_skills?.length > 0">Preferred Skills
-                </li>
-                <li (click)="scrollSmoothTo('interest')" *ngIf="jobData.preferred_interests?.length > 0">Preferred
-                  Interests</li>
+                <li (click)="scrollSmoothTo('qualification_level_breakdown')"> Qualification Level Estimate</li>
+                <li (click)="scrollSmoothTo('skills')" *ngIf="matchedSkills?.length > 0 || missingSkills?.length > 0"> Missing/Matching Skills</li>
+                  <li (click)="scrollSmoothTo('matched_interest')" *ngIf="matchedInterests?.length > 0"> Matched Interest</li>
+                <li (click)="scrollSmoothTo('description')"*ngIf="jobData.position_desc" >Job Description</li>
+                <li (click)="scrollSmoothTo('qualification')" *ngIf="jobData.preferred_education_levels?.length > 0 ||
+                  jobData.preferred_majors?.length > 0 || jobData.preferred_major_categories?.length > 0">Education Level</li>
+                <li (click)="scrollSmoothTo('experience')"*ngIf="jobData.preferred_experience?.length > 0" >Preferred Experience</li>
+                <li (click)="scrollSmoothTo('preferred_skills')" *ngIf="jobData.minimum_skills?.length > 0 || jobData.preferred_skills?.length > 0">Preferred Skills</li>
+                <li (click)="scrollSmoothTo('interest')" *ngIf="jobData.preferred_interests?.length > 0">Preferred Interests</li>
                 <li (click)="scrollSmoothTo('school')" *ngIf="restrictedSchools?.length > 0">School Restrictions</li>
               </ol>
             </mat-card>
@@ -104,7 +104,7 @@
 
       <div *ngFor="let info of positionName ">
 
-        <div class="row position-detail">
+        <div class="row position-detail" id="information">
 
           <h1>{{info.position}} </h1>
           <div class="position-right">
@@ -155,7 +155,7 @@
                 </li>
                 <li>
                   <img src="assets/icons/ic_clock.svg">
-                  <span class="image"> {{Difference_In_Days}} days ago</span>
+                  <span class="image"> {{differenceInDays}} days ago</span>
                 </li>
                 <li>
                   <span class="recruiter-text">Recruiter</span>&nbsp;
@@ -204,23 +204,25 @@
                 </div>
               </mat-grid-tile>
               <mat-grid-tile>
-                <div class="card-item">
+                <div class="card-item" >
                   <span>Application Deadline</span>
-                  <p>{{info.end_date |  date: 'MMM d, y'}}</p>
+                  <p *ngIf="info.end_date; else noDate">{{info.end_date |  date: 'MMM d, y'}}</p>
                 </div>
+                <ng-template #noDate>
+                  <p class="noLocation">N/A</p>
+                </ng-template>
               </mat-grid-tile>
               <mat-grid-tile>
                 <div class="card-item">
                   <span>Education Level Required</span>
-                  <p *ngFor="let education of info.preferred_education_levels">
-                    {{education.education_level ? education.education_level : 'N/A'}}</p>
+                  <p>{{jobLowestEducationLevel ? jobLowestEducationLevel : 'N/A'}}</p>
                 </div>
               </mat-grid-tile>
             </mat-grid-list>
           </div>
         </div>
 
-        <div class="row position-qualification-detail">
+        <div class="row position-qualification-detail" id="qualification_level_breakdown" >
           <h3>Qualification Level Estimate Breakdown</h3>
           <div class="position-qualification-skills" *ngFor="let score of positionName">
             <simple-tag *ngIf="score.true_fitscore_info?.skills_weight" type="gray" title="Skills Match"
@@ -244,9 +246,8 @@
             </p>
           </div>
         </div>
-        <div id="skills">
-          <div class="row position-required-skills-detail main-card"
-            *ngIf="matchedSkills?.length > 0 && missingSkills?.length > 0">
+        <div id="skills" *ngIf="matchedSkills?.length > 0 || missingSkills?.length > 0">
+          <div class="row position-required-skills-detail main-card">
             <div class="show-button">
               <action-button routerLink="." type="text" title="{{!info.showMoreFlag ? 'See All' :
                   'See Less'}}" color="primary" (click)="info.showMoreFlag = !info.showMoreFlag"
@@ -256,42 +257,43 @@
 
             <ul>
               <li>
-                <h5 for="skill_required">Matched Skills<span>{{ matchedSkills?.length}}</span>
+                <h5 for="skill_required">Matched Skills<span *ngIf="matchedSkills?.length > 0">{{ matchedSkills?.length}}</span>
                 </h5>
                 <div class="skil-height-fix" [ngClass]="{'skill-more-height': info.showMoreFlag}"
-                  *ngIf="matchedSkills; else noSkill">
-                  <div class="skills-preferred-m green-color-tag" *ngFor="let skill of matchedSkills ">
-                    <simple-tag type="green" title="{{skill.skill ? skill.skill : 'N/A' }}">
+                *ngIf="matchedSkills?.length > 0; else noSkill">
+                  <div class="skills-preferred-m green-color-tag" *ngFor="let matchSkill of matchedSkills ">
+                    <simple-tag type="green" title="{{matchSkill.skill}}" (click)="openSkilladdDialog(matchSkill)">
                     </simple-tag>
                   </div>
                 </div>
               </li>
               <li>
-                <h5 for="skill_required">Missing Skills<span>{{ missingSkills?.length}}</span>
+                <h5 for="skill_required">Missing Skills<span *ngIf="missingSkills?.length > 0">{{ missingSkills?.length}}</span>
                 </h5>
                 <div class="skil-height-fix" [ngClass]="{'skill-more-height': info.showMoreFlag}"
-                  *ngIf="missingSkills; else noSkill">
+                  *ngIf="missingSkills?.length > 0; else noSkill">
                   <div class="skills-preferred-m red-color-tag" *ngFor="let skill of missingSkills ">
-                    <simple-tag type="red" title="{{skill.skill}}">
+                    <simple-tag type="red" title="{{skill.skill}}" (click)="openSkilladdDialog(skill)">
                     </simple-tag>
 
                   </div>
                 </div>
+                <ng-template #noSkill>
+                  <ul>
+                    <li>N/A</li>
+                  </ul>
+                </ng-template>
               </li>
             </ul>
 
           </div>
-          <ng-template #noSkill>
-            <ul>
-              <li>N/A</li>
-            </ul>
-          </ng-template>
+
         </div>
 
-        <div class="row position-interest-detail" *ngIf="matchedInterests?.length > 0" id="interest">
+        <div class="row position-interest-detail" id="matched_interest" *ngIf="matchedInterests?.length > 0">
           <h3>Matched Interests</h3>
           <div class="position-matched">
-            <h5 for="skill_required">Matched Interests <span>{{ matchedInterests?.length}}</span>
+            <h5 for="skill_required">Matched Interests <span *ngIf="matchedInterests?.length > 0">{{ matchedInterests?.length}}</span>
             </h5>
             <div class="skil-height-fix" *ngIf="matchedInterests;">
               <div class="skills-preferred-m" *ngFor="let matched_interest of matchedInterests ">
@@ -302,19 +304,23 @@
           </div>
         </div>
         <div class="comman" *ngFor="let jobData of positionName" id="description">
-          <div class="row position-interest-detail" *ngIf="jobData.position_desc">
+          <div class="row position-interest-detail"  *ngIf="jobData.position_desc">
             <h3>Job Description</h3>
             <div class="position-matched" [ngClass]="{'skill-more-height': info.readMoreFlag}">
               <p>{{jobData.position_desc}}</p>
             </div>
+            <div class="position-job-desc-btn">
+              <action-button routerLink="." type="text" title="{{!info.readMoreFlag ? 'Read More' :
+                  'Read Less'}}" color="primary" (click)="info.readMoreFlag = !info.readMoreFlag"></action-button>
+            </div>
           </div>
           <div class="row position-eductaion-detail position-required-skills-detail" id="qualification"
-            *ngIf="jobData.preferred_education_levels?.length > 0 && jobData.preferred_majors?.length > 0 && jobData.preferred_major_categories?.length > 0">
+          *ngIf="jobData.preferred_education_levels?.length > 0 || jobData.preferred_majors?.length > 0 || jobData.preferred_major_categories?.length > 0">
             <h3>Education Level</h3>
-            <div class="education-level-m" *ngIf="jobData.preferred_education_levels > 0">
+            <div class="education-level-m" *ngIf="jobData.preferred_education_levels?.length > 0">
               <h5 for="skill_required">Preferred Education <span>{{ jobData.preferred_education_levels?.length}}</span>
               </h5>
-              <div class="skil-height-fix" *ngIf="jobData.preferred_education_levels;">
+              <div class="skil-height-fix"*ngIf="jobData.preferred_education_levels">
                 <div class="skills-preferred-m" *ngFor="let level of jobData.preferred_education_levels ">
                   <simple-tag type="gray" title="{{level.education_level}}">
                   </simple-tag>
@@ -322,59 +328,61 @@
               </div>
             </div>
             <div class="education-level-m" *ngIf="jobData.preferred_majors?.length > 0">
-              <h5 for="skill_required">Preferred Majors <span>{{ jobData.preferred_majors?.length}}</span>
+              <h5 for="skill_required">Preferred Majors <span >{{ jobData.preferred_majors?.length}}</span>
               </h5>
               <div class="skills" *ngIf="displayItemsLimit; let limit">
                 <div class="skills-preferred-m" *ngFor="let major of jobData.preferred_majors; let i = index; ">
                   <simple-tag type="gray" *ngIf="i < limit" title="{{major.major_name}}">
                   </simple-tag>
                 </div>
-                <img *ngIf="limit < jobData.preferred_majors?.length " class="edu_img"
-                  (click)="limit = limit + displayItemsLimit" src="assets/icons/ic_more.svg" alt="See More">
+                <img *ngIf="limit < jobData.preferred_majors?.length" class="edu_img"  (click)="limit = limit + displayItemsLimit"
+                  src="assets/icons/ic_more.svg" alt="See More">
               </div>
             </div>
-            <div class="education-level-m" *ngIf="jobData.preferred_major_categories?.length > 0">
+            <div class="education-level-m"  >
+              <div *ngIf="jobData.preferred_major_categories?.length > 0">
               <h5 for="skill_required">Preferred Major Categories
                 <span>{{ jobData.preferred_major_categories?.length}}</span>
               </h5>
-              <div class="skil-height-fix" *ngIf="jobData.preferred_major_categories;">
+              <div class="skil-height-fix" *ngIf="jobData.preferred_major_categories">
                 <div class="skills-preferred-m" *ngFor="let major_categories of jobData.preferred_major_categories ">
                   <simple-tag type="gray" title="{{major_categories.cat_name}}">
                   </simple-tag>
                 </div>
               </div>
             </div>
+            </div>
           </div>
-          <div class="row position-experience-detail" id="experience" *ngIf="jobData.preferred_experience?.length > 0">
+          <div class="row position-experience-detail" id="experience" *ngIf="jobData.preferred_experience?.length > 0" >
             <h3>Preferred Experience</h3>
-            <ul>
+            <ul >
               <li *ngFor="let experience of jobData.preferred_experience">
-                <h6>{{experience.industry_name}} ({{experience.preferred_years}} years)</h6>
-                <div class="education-level-m">
-                  <p>{{experience.exp_desc}}</p>
-                  <h5 for="skill_required">Preferred Skills Trained
-                    <span>{{ experience.preferred_skills_trained?.length}}</span>
-                  </h5>
-                  <div class="skills" *ngIf="displayItemsLimit; let limit">
-                    <div class="skills-preferred-m"
-                      *ngFor="let skill of experience.preferred_skills_trained; let i = index;">
-                      <simple-tag type="gray" *ngIf="i < limit" title="{{skill.skill}}">
-                      </simple-tag>
-                    </div>
-                    <img *ngIf="limit < experience.preferred_skills_trained?.length "
-                      (click)="limit = limit + displayItemsLimit" src="assets/icons/ic_more.svg" alt="See More">
+              <h6 *ngIf="experience.industry_name">{{experience.industry_name}} ({{experience.preferred_years}} years)</h6>
+              <div class="education-level-m">
+                <p *ngIf="experience.exp_desc" >{{experience.exp_desc}}</p>
+                <h5 for="skill_required" *ngIf="experience.preferred_skills_trained?.length > 0"> Preferred Skills Trained
+                  <span>{{ experience.preferred_skills_trained?.length}}</span>
+                </h5>
+                <div class="skills" *ngIf="displayItemsLimit; let limit">
+                  <div class="skills-preferred-m"
+                    *ngFor="let skill of experience.preferred_skills_trained; let i = index;">
+                    <simple-tag type="gray" *ngIf="i < limit" title="{{skill.skill}}">
+                    </simple-tag>
                   </div>
+                  <img *ngIf="limit < experience.preferred_skills_trained?.length " (click)="limit = limit + displayItemsLimit"
+                    src="assets/icons/ic_more.svg" alt="See More">
                 </div>
-              </li>
-            </ul>
+              </div>
+            </li>
+          </ul>
           </div>
-          <div class="row position-required-skills-detail"
-            *ngIf="jobData.preferred_skills?.length > 0 && jobData.minimum_skills?.length > 0" id="preferred_skills">
+          <div class="row position-required-skills-detail" id="preferred_skills" *ngIf="jobData.minimum_skills?.length > 0 || jobData.preferred_skills?.length > 0">
             <h3>Preferred & Required Skills</h3><img class="question-icon" src="assets/icons/ic_question.svg"
               (click)="openSkillDescriptionDialog()">
-            <div class="education-level-m">
-              <h5 for="skill_required">Skills Required <span>{{ jobData.minimum_skills?.length}}</span>
+            <div class="education-level-m" >
+              <h5 for="skill_required">Skills Required <span *ngIf="jobData.minimum_skills?.length > 0">{{ jobData.minimum_skills?.length}}</span>
               </h5>
+              <div *ngIf="jobData.minimum_skills; else noSkill" >
               <div class="skills" *ngIf="displayItemsLimit; let limit">
                 <div class="skills-preferred-m" *ngFor="let min_skill of jobData.minimum_skills; let i = index; ">
                   <simple-tag type="gray" *ngIf="i < limit" title="{{min_skill.skill}}" ellipseTag="true"
@@ -386,12 +394,16 @@
                 <img *ngIf="limit < jobData.minimum_skills?.length" (click)="limit = limit + displayItemsLimit"
                   src="assets/icons/ic_more.svg" alt="See More">
               </div>
+              </div>
+              <ng-template #noSkill>
+                    <span>N/A</span>
+                </ng-template>
             </div>
             <div class="education-level-m">
-              <h5 for="skill_required">Skills Preferred <span>{{ jobData.preferred_skills?.length}}</span>
+              <h5 for="skill_required">Skills Preferred <span *ngIf="jobData.preferred_skills?.length > 0">{{ jobData.preferred_skills?.length}}</span>
               </h5>
+              <div *ngIf="jobData.preferred_skills; else noSkill" >
               <div class="skills" *ngIf="displayItemsLimit; let limit">
-
                 <div class="skills-preferred-m" *ngFor="let preskill of jobData.preferred_skills; let i = index;">
                   <simple-tag *ngIf="i < limit" type="normal" title="{{preskill.skill}}" ellipseTag="true"
                     value="{{preskill.skill_level}}"
@@ -403,10 +415,10 @@
                 <img *ngIf="limit < jobData.preferred_skills?.length" (click)="limit = limit + displayItemsLimit"
                   src="assets/icons/ic_more.svg" alt="See More">
               </div>
+              </div>
             </div>
           </div>
-          <div class="row position-required-skills-detail" *ngIf="jobData.preferred_interests?.length > 0"
-            id="interest">
+          <div class="row position-required-skills-detail" id="interest" *ngIf="jobData.preferred_interests?.length > 0">
             <h3>Preferred Interests</h3>
             <div class="position-prefer-interest">
               <h5 for="skill_required">Interest <span>{{ jobData.preferred_interests?.length}}</span>
