--- a/client/src/app/pages/positions/create-position/create-position.component.html
+++ b/client/src/app/pages/positions/create-position/create-position.component.html
@@ -553,7 +553,25 @@
 
     <div *ngIf="preferred_work_experiences && preferred_work_experiences.length > 0" class="row" id="position-exp">
       <h3>Preferred Experience</h3>
-      
+      <ng-container *ngFor="let experience of preferred_work_experiences; let i = index;">
+        <h4>{{experience.industry.industry_name}} {{experience.years ? '(since ' + experience.years + ')' : ''}}</h4>
+        
+        <ng-container *ngIf="experience.skills_trained && experience.skills_trained.length > 0">
+          <h5>Preferred Skills Trained {{experience.skills_trained.length}}</h5>
+          <div class="skills" *ngIf="displayItemsLimit; let limit">
+            <ng-container *ngFor="let skill_trained of experience.skills_trained">
+              <simple-tag type="gray" title="{{skill_trained.skill}}"></simple-tag>
+            </ng-container>
+            <img *ngIf="limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit" src="assets/icons/ic_see_less.svg" alt="See Less">
+            <img *ngIf="limit < experience.skills_trained.length" (click)="limit = limit + displayItemsLimit" src="assets/icons/ic_see_more.svg" alt="See More">
+          </div>
+        </ng-container>
+        <ng-container *ngIf="true; let short_desc">
+          <p *ngIf="experience.description" class="description"  [class.short-desc]="short_desc && experience.description.length > helperService.shortDescLength">{{short_desc ? helperService.shortDescription(experience.description) : experience.description }}</p>
+          <a *ngIf="experience.description && experience.description.length > helperService.shortDescLength" (click)="short_desc = !short_desc">{{short_desc ? 'Read More' : 'Read Less'}}</a>
+        </ng-container>
+        <mat-divider *ngIf="(i < preferred_work_experiences.length - 1) || editMode"></mat-divider>
+      </ng-container>
     </div>
 
     <div *ngIf="(minimum_skills && minimum_skills.length > 0) || (preferred_skills && preferred_skills.length > 0)" class="row" id="position-skills">
