--- a/client/src/app/pages/positions/create-position/create-position.component.html
+++ b/client/src/app/pages/positions/create-position/create-position.component.html
@@ -473,7 +473,7 @@
           </div>
         </div>
         <div class="position-status">
-          <action-button type="flat" color="primary" [title]="position ? 'Update' : 'Publish'" (click)="onClickPublish()"></action-button>
+          <action-button type="flat" color="primary" [title]="position ? 'Published' : 'Publish'" (click)="onClickPublish()"></action-button>
         </div>
       </div>
       <div class="position-row__details">
